Fix: icons being broken on safari

--- a/component-library/components/generic/custom-icon/custom-icon.scss
+++ b/component-library/components/generic/custom-icon/custom-icon.scss
@@ -42,6 +42,10 @@
     }
   }
 
+  &__svg {
+    width: 100%;
+  }
+
   &__image {
     background: var(--c-custom-icon-color);
     width: 100%;
