--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -47,6 +47,10 @@
         }
     }
 
+    &__svg {
+        width: 100%;
+    }
+
     &__image {
         background: var(--c-icon-color);
         width: 100%;
